# templates-api

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  data.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage-comment.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_22d51549091ad78b_app_config_py.html  z_5890c8d9b67ce1a7_info_py.html  z_5890c8d9b67ce1a7_tasks_py.html  z_5890c8d9b67ce1a7_templates_py.html  z_5890c8d9b67ce1a7_upload_py.html  z_5890c8d9b67ce1a7_utils_py.html  z_6b3d375394a49b5e_template_service_py.html  z_6b3d375394a49b5e_upload_service_py.html  z_8e43bf9996e5bf17_models_py.html  z_8e43bf9996e5bf17_template_designer_py.html  z_a44f0ac069e85531_api_template_test_py.html  z_a44f0ac069e85531_api_test_py.html  z_b5c6e5c2d52e8bcc_api_py.html  z_b5c6e5c2d52e8bcc_main_py.html
src/tplapi/: main.py
src/tplapi/api/: info.py  tasks.py  templates.py  upload.py  utils.py
src/tplapi/config/: app_config.py  config.yaml
src/tplapi/models/: models.py  template_designer.py
src/tplapi/services/: template_service.py  upload_service.py
tests/: api_template_test.py  api_test.py
tests/resources/templates/: calibration.json  dose_response.json  dose_response_noname.json  raman.json
